--- a/sass/typography/_typography.scss
+++ b/sass/typography/_typography.scss
@@ -6,7 +6,7 @@ optgroup,
 textarea {
 	color: $color__text-main;
 	font-family: $font__main;
-	@include font-size(1);
+	@include font-size(1.1);
 	line-height: $line-height;
 
         /* Media Breakpoints for Responsive Typography */
